--- a/src/components/2-MainPage/Book/book.css
+++ b/src/components/2-MainPage/Book/book.css
@@ -42,7 +42,7 @@ Book Card
   font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial;
   color: #111;
-  margin: 10% 70%;
+  /* margin: 10% 70%; */
 }
 
 /* [1] top area */
