--- a/src/components/2-MainPage/Services/ServicePage/servicepage.css
+++ b/src/components/2-MainPage/Services/ServicePage/servicepage.css
@@ -14,6 +14,7 @@
   border-radius: var(--rounded);
   box-shadow: 0 6px 18px rgba(17, 17, 17, 0.06);
   color: black;
+  margin-bottom: 50px;
 }
 
 .title-service-page {
@@ -79,4 +80,35 @@
   color: black;
   width: 30px !important;
   height: 30px !important;
+}
+/* Contact Us */
+.contact-us-title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.information {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+.reviews-title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.reviews-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.review-us-btn {
+  border: 1px solid gray;
+  border-radius: var(--rounded);
+  padding: 7px;
+  font-size: 15px;
+  transition: 0.3s;
+}
+.review-us-btn:hover {
+  opacity: 0.7;
 }
