--- a/src/components/2-MainPage/Services/services.css
+++ b/src/components/2-MainPage/Services/services.css
@@ -2,3 +2,10 @@
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 1000px) {
+  .services-container {
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+  }
+}
