--- a/src/routes/bookRoute.css
+++ b/src/routes/bookRoute.css
@@ -214,7 +214,10 @@
 }
 
 /* responsive */
-@media (max-width: 820px) {
+@media (max-width: 1000px) {
+  .booking-wrapper {
+    flex-direction: column;
+  }
   .booking-card {
     width: 100%;
     flex-direction: column;
